# sashka

./: .env.example  .gitignore  Dockerfile  Makefile  RunTests.md  alembic.ini  publisher.py  pyproject.toml  pytest.ini  send_messgae.py
.github/workflows/: prod_insighter_deploy_workflow.yml  stage_insighter_deploy_workflow.yml
configs/: ai_api_endpoints.py  base.py  clients.py  cloud_storage.py  communicator.py  config.py  database.py  main_api_gateway.py  nats.py  nats_queues.py  redis.py  research.py  s3_storage.py  telegram_account.py
datasourse_for_test/: resercch_imirtation.py
deploy/local/: docker-compose.yml
deploy/prod/: docker-compose.yml
deploy/prod/test_services/: docker-compose.yml
deploy/stage/: docker-compose.yml
migration/: env.py
migrations/: env.py
migrations/versions/: da4744d4d0e9_initial_tables.py
src/ai_communicator/: gpt_comunicator.py  model.py
src/ai_communicator/exceptions/: response.py
src/api/app/: run.py
src/api/routers/: session.py
src/database/: database_t.py
src/database/connections/: redis_connect.py
src/database/exceptions/: create.py  read.py
src/database/postgres/: __init__.py  t_data_objects.py  t_querys.py
src/database/repository/: assistant.py  base.py  client.py  configuration.py  data_cash.py  message_repo.py  owner.py  ping.py  research.py  status.py  storage.py  user.py  user_in_reserach.py
src/dispatcher/: __init__.py  dispatcher.py  models.py
src/dispatcher/communicators/: consol.py  email.py  reggestry.py  telegram.py
src/dispatcher/interactions/: code.py
src/distributor/: run.py
src/distributor/app/: run.py
src/distributor/exceptions/: atribute.py  messeage.py  parse.py
src/distributor/services/: ban_checker.py  s3_manager.py
src/distributor/telegram_client/: device_configs.py
src/resrcher/: assistent_manger.py  models.py  open_ai_namager.py  reserch_manager.py  resercher.py  user_cimmunication.py  user_manager.py
src/schemas/: assistant.py  client.py  owner.py  queue.py  research.py  response.py  status.py  user.py
src/schemas/communicator/: checker.py  distanation.py  message.py  prompt.py  request.py  response.py
src/schemas/service/: assistant.py  (+9 more)
src/utils/: help_nats.py  wrappers.py
src/web/: main.py
src_v0/ai_communicator/: gpt_comunicator.py  model.py
src_v0/dispatcher/: dispatcher.py
src_v0/distributor/: run.py  unknown_errors.txt
src_v0/resrcher/: assistent_manger.py  models.py  open_ai_namager.py  resercher.py  user_cimmunication.py  user_manager.py
src_v0/schemas/: assistant.py  message.py  research.py  status.py  user.py
src_v0/utils/: convert_to_dict.py
system_checking/: nats_chekcer.py  run.py
tests/: conftest.py
tests/database/: load_data.py
tests/mock_models/: mock_assistant_message.json  mock_assistants.json  mock_client.json  mock_configurations.json  mock_ping.json  mock_research.json  mock_research_owner.json  mock_research_status.json  mock_user.json  mock_user_messages.json  mock_user_research_relation.json  mock_user_status.json
tests/models/: mock_assistant_message.json  mock_assistants.json  mock_client.json  mock_research.json  mock_research_owner.json  mock_research_status.json  mock_services.json  mock_user.json  mock_user_messages.json  mock_user_research_relation.json  mock_user_status.json
tests/test_client/: conftest.py  test_1.py  test_manager.py  testdata.py
tests/test_communicator/: conftest.py  test_checker.py
tests/test_inspector/: conftest.py  test_stop_word.py
tests/test_reserarcher/: conftest.py  test_inspector.py  test_ping_delay_calculator.py  test_research_over_checker.py  test_research_process.py  test_research_starter.py  test_research_stopper.py  test_stop_word_checker.py  test_user_pingator.py
(+260 files in other folders)
