[tool.poetry]
name = "Sashka"
version = "0.1.0"
description = ""
authors = ["artemprod <artemprod1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
environs = "^11.0.0"
pytest = "^8.3.2"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pytest-asyncio = "^0.23.8"
loguru = "^0.7.2"
fastapi-websocket-rpc = "^0.1.25"
faststream = {extras = ["nats"], version = "^0.5.18"}
aioredis = "^2.0.1"
setuptools = "^73.0.1"
wheel = "^0.44.0"
redis = "^5.0.8"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
openai = "^1.42.0"
numpy = "^2.1.1"
tzlocal = "^5.2"
nats-py = "^2.9.0"
aiohttp = "^3.10.8"
async-cache = "^1.1.1"
telethon = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

