[tool.poetry]
name = "Sashka"
version = "0.1.0"
description = ""
authors = ["artemprod <artemprod1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
environs = "^11.0.0"
pytest = "^8.3.2"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pytest-asyncio = "^0.23.8"
loguru = "^0.7.2"
fastapi-websocket-rpc = "^0.1.25"
faststream = {extras = ["nats"], version = "^0.5.18"}
aioredis = "^2.0.1"
setuptools = "^73.0.1"
wheel = "^0.44.0"
redis = "^5.0.8"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
openai = "^1.42.0"
numpy = "^2.1.1"
tzlocal = "^5.2"
nats-py = "^2.9.0"
aiohttp = "^3.10.8"
async-cache = "^1.1.1"
telethon = "^1.37.0"
pandas = "^2.2.3"
xlsxwriter = "^3.2.0"
openpyxl = "^3.1.5"
pydantic-settings = "^2.6.1"
pydantic-settings-yaml = "^0.2.0"
ruff = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Основные проверки, которые помогут поддерживать стандартный стиль PEP 8 и качество кода.
select = [
    "E",  # Ошибки PEP 8
    "F",  # PyFlakes
    "W",  # Предупреждения PEP 8
    "C",  # Сложность кода
    "N",  # Наименования
    "S",  # Безопасность
    "B",  # Bugbear
    "T",  # Типизация
    "I",  # isort
]

# Игнорируем некоторые строгие правила, которые могут не подойти всем проектам
ignore = [
    "E501",  # Длина строки
]

# Основные настройки
line-length = 120
target-version = "py39"
fix = true
unfixable = ["F401"]  # Неисправляемые автоматически импорты

# Исключаем системные директории и кэши
exclude = [
    ".venv",
    "venv",
    "dist",
    "build",
    ".git",
    "__pycache__",
    ".mypy_cache",
]

# Настройки сортировки импортов
[tool.ruff.isort]
combine-as-imports = true
force-single-line = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]


# Игнорирование некоторых проверок в специальных файлах
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Разрешаем неиспользуемые импорты в __init__.py